# RadiopaediaStudio

./: .gitignore  README.md  electron-builder.yml  package-lock.json  package.json  pacs-anonymizer-handoff.md  playwright.config.ts  pre-radiopaedia-review.md  tsconfig.json  tsconfig.renderer.json
backend/: backend.spec  backend_entry.py  pyproject.toml
backend-js/: classify.mjs  package-lock.json  package.json  server.mjs
backend-js/test/: anonymise.test.mjs  cancellation.test.mjs  classify-contract.test.mjs  classify-fixtures.json  redact-path.test.mjs
backend/app/: anonymizer.py  classify.py  compress.py  logsafe.py  main.py  reformat.py  thumbnails.py  windowing.py
backend/tests/: conftest.py  test_cancellation.py  test_classify_contract.py  test_delete_series.py  test_find_dicoms.py  test_log_redaction.py  test_orientation.py  test_reformat.py  test_scrub.py  test_scrub_file.py  test_uid_remap.py  test_windowing.py
scripts/: build-viewer.mjs  smoke-test-radiopaedia-upload.mjs  write-radiopaedia-config.mjs
src/main/: credentials-core.ts  credentials.ts  index.ts  node-manager.ts  preload.ts  python-manager.ts  radiopaedia-auth-core.ts  radiopaedia-auth.ts  radiopaedia-config.example.ts  radiopaedia-oauth-oob.ts  sidecar-pidfile.ts  upload-images-core.ts  upload-images.ts
src/renderer/: globals.d.ts  index.html  renderer.js  renderer.ts  viewer.js
src/shared/: api.ts  (+1 more)
test/: credentials-core.test.mjs  radiopaedia-auth-core.test.mjs  radiopaedia-oauth-oob.test.mjs  sent-cases-core.test.mjs  shared-api.test.mjs  upload-images-core.test.mjs
(+2 files in other folders)
