[project]
name = "radiopaedia-studio-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydicom>=2.4",
    "numpy>=1.26",
    "Pillow>=10",
    "pylibjpeg>=2",
    "pylibjpeg-openjpeg>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pyinstaller>=6.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
